test/parsetest/valid/methods.java
class A {
    public int[] a(){
        return 3;
    }

    public B[][][] a(int a, String afdsg){
        return !!-!!!-!-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
        !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!(a + 4 %4 = 5);
    }
}

class B {

}