test/parsetest/invalid/invalid_use_of_this3.java
class A {
  public static void main(String[] a) {

  }
  public void bla(this a){

  }
}